<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>master3_nav2</name>
  <version>0.0.0</version>
  <description>Package setting up the nav stack</description>
  <maintainer email="cord.burmeister@live.de">marvin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

   <!-- It is also good practice to add a dependency to ros2launch to the package.xml file of your package: -->
   <exec_depend>ros2launch</exec_depend>

   <depend>master3_bringup</depend>
   <depend>robot_localization</depend>

   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend>
   
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
